--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-
+flask==2.0.1
+numpy==1.21.2
+pandas==1.3.3
+scikit-learn==0.24.2
+opencv-python==4.5.3.56
+tensorflow==2.6.0
+ortools==9.0.9048
+python-dotenv==0.19.0
+gunicorn==20.1.0
